@@ -23,6 +23,8 @@
             -Dfile.encoding=UTF-8
             -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectjVersion}/aspectjweaver-${aspectjVersion}.jar
             -javaagent:${settings.localRepository}/org/jacoco/org.jacoco.agent/${jacoco.version}/org.jacoco.agent-${jacoco.version}-runtime.jar=destfile='${session.executionRootDirectory}/target/jacoco.exec'
+            --module-path=${org.slf4j:slf4j-api:jar}
+            --add-modules=org.slf4j
             --add-opens=java.base/java.lang=ALL-UNNAMED
         </surefire.args>
 
@@ -41,6 +43,10 @@
     </modules>
 
     <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.mule.services</groupId>
             <artifactId>mule-service-weave</artifactId>
